# travel-agent

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  catalog.py  flight_numbers.py  main.py  money.py  route_details.py  route_options.py  settings.py  time_slots.py  web.py
app/ingestion/: __init__.py  google_flights_email_parser.py  observation_matcher.py
config/: app_state.json  gmail_integration.json
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
planning/: README.md  agent-checkpoint.md  agent-refresh-prompt.md  gmail-booking-ingestion.md  google-flights-poc.md  implementation-plan.md  sqlite-storage.md  trip-groups-and-recurring-rules.md  v0-data-model.md  v0-product-spec.md  v0-tech-spec.md  v0-wireframes.md  v1-ui-pass.md
scripts/: playwright_smoke.py
tests/: conftest.py  test_app_smoke.py  test_background_fetch.py  test_booking_email_ingest.py  test_booking_resolution.py  test_catalog.py  test_dashboard_views.py  test_data_scope.py  test_frontend_api.py  test_gmail_client.py  test_gmail_config.py  test_gmail_sync_state.py  test_google_flights_email_parser.py  test_google_flights_parser.py  test_import_flow.py  test_imports.py  test_launchd.py  test_models.py  test_money.py  test_poll_gmail_bookings.py  test_program_generation.py  test_program_validation.py  test_refresh_queue.py  test_repository.py  test_review_and_recommendation_edges.py  test_route_preferences.py  test_route_snapshot_loading.py  test_settings.py  test_spa_bootstrap.py  test_trip_editor.py  test_trip_workflows.py  test_web_smoke.py
(+197 files in other folders)
