[project]
name = "travel-agent"
version = "0.1.0"
description = "Local-first recurring flight tracker and recommendation tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "jinja2>=3.1.6,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
